{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 149,
  "lineage": "a750d1f1-56a7-677a-2ac9-8f2c626e5741",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "loadbalancer1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "name": "PublicIPAddress",
                "public_ip_address_id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/test-ram/providers/Microsoft.Network/publicIPAddresses/fgtfwPublicIP"
              }
            ],
            "id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/test-ram/providers/Microsoft.Network/loadBalancers/external-loadbalancer",
            "location": "uksouth",
            "name": "external-loadbalancer",
            "resource_group_name": "test-ram",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.public_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "loadbalancer2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/test-ram/providers/Microsoft.Network/loadBalancers/internal-loadbalancer",
            "location": "uksouth",
            "name": "internal-loadbalancer",
            "resource_group_name": "test-ram",
            "sku": "Basic",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "fgtport1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/test-ram/providers/Microsoft.Network/networkInterfaces/fgtport1",
            "internal_domain_name_suffix": "ovaqkj5ltsle1akbea231prxbg.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.1.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/test-ram/providers/Microsoft.Network/publicIPAddresses/fgtfwPublicIP",
                "subnet_id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/test-ram/providers/Microsoft.Network/virtualNetworks/test_vnet/subnets/publicsubnet"
              }
            ],
            "location": "uksouth",
            "mac_address": "00-0D-3A-D5-13-D0",
            "name": "fgtport1",
            "private_ip_address": "10.1.0.4",
            "private_ip_addresses": [
              "10.1.0.4"
            ],
            "resource_group_name": "test-ram",
            "virtual_machine_id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/test-ram/providers/Microsoft.Compute/virtualMachines/fortgate_vm"
          },
          "dependencies": [
            "azurerm_public_ip.public_ip",
            "azurerm_subnet.subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "fgtport2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/test-ram/providers/Microsoft.Network/networkInterfaces/fgtport2",
            "internal_domain_name_suffix": "ovaqkj5ltsle1akbea231prxbg.zx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.1.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/test-ram/providers/Microsoft.Network/virtualNetworks/test_vnet/subnets/privatesubnet"
              }
            ],
            "location": "uksouth",
            "mac_address": "00-0D-3A-D5-10-A5",
            "name": "fgtport2",
            "private_ip_address": "10.1.1.4",
            "private_ip_addresses": [
              "10.1.1.4"
            ],
            "resource_group_name": "test-ram",
            "virtual_machine_id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/test-ram/providers/Microsoft.Compute/virtualMachines/fortgate_vm"
          },
          "dependencies": [
            "azurerm_subnet.subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "publicnetworknsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/test-ram/providers/Microsoft.Network/networkSecurityGroups/PublicNetworkSecurityGroup",
            "location": "uksouth",
            "name": "PublicNetworkSecurityGroup",
            "resource_group_name": "test-ram",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "TCP",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "outgoing_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/test-ram/providers/Microsoft.Network/networkSecurityGroups/PublicNetworkSecurityGroup/securityRules/egress",
            "name": "egress",
            "network_security_group_name": "PublicNetworkSecurityGroup",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "test-ram",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.publicnetworknsg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/test-ram/providers/Microsoft.Network/publicIPAddresses/fgtfwPublicIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "51.140.139.41",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "fgtfwPublicIP",
            "resource_group_name": "test-ram",
            "sku": "Basic",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "0.0.0.0/0",
            "id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/test-ram/providers/Microsoft.Network/routeTables/fgt_routetable/routes/default",
            "name": "default",
            "next_hop_in_ip_address": "10.1.1.4",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "test-ram",
            "route_table_name": "fgt_routetable",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.fgtport2",
            "azurerm_subnet.subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/test-ram/providers/Microsoft.Network/routeTables/fgt_routetable",
            "location": "uksouth",
            "name": "fgt_routetable",
            "resource_group_name": "test-ram",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "default",
                "next_hop_in_ip_address": "10.1.1.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.fgtport1",
            "azurerm_network_interface.fgtport2",
            "azurerm_public_ip.public_ip",
            "azurerm_subnet.subnet1",
            "azurerm_subnet.subnet2",
            "azurerm_virtual_machine.fgtvm_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/test-ram/providers/Microsoft.Network/virtualNetworks/test_vnet/subnets/publicsubnet",
            "name": "publicsubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "test-ram",
            "virtual_network_name": "test_vnet"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/test-ram/providers/Microsoft.Network/virtualNetworks/test_vnet/subnets/privatesubnet",
            "name": "privatesubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "test-ram",
            "virtual_network_name": "test_vnet"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "27054175-9ceb-4d96-8141-2039ddbe370e",
            "id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/test-ram/providers/Microsoft.Network/virtualNetworks/test_vnet",
            "location": "uksouth",
            "name": "test_vnet",
            "resource_group_name": "test-ram",
            "subnet": [
              {
                "address_prefix": "10.1.0.0/24",
                "id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/test-ram/providers/Microsoft.Network/virtualNetworks/test_vnet/subnets/publicsubnet",
                "name": "publicsubnet"
              },
              {
                "address_prefix": "10.1.1.0/24",
                "id": "/subscriptions/2c27975e-ce4f-421e-82ff-9e5080dc09c5/resourceGroups/test-ram/providers/Microsoft.Network/virtualNetworks/test_vnet/subnets/privatesubnet",
                "name": "privatesubnet"
              }
            ]
          }
        }
      ]
    }
  ]
}